services/svc-pod-1-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-pod-1-lb
spec:
  type: LoadBalancer
  selector:
    app: pod-1
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30000
