services/svc-pod-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-pod-1
spec:
  type: NodePort
  selector:
    app: pod-1
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30001 # any value from 30000 to 32767
      protocol: TCP
      name: nginx-port
