services/svc-pod-2.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-pod-2
spec:
  type: ClusterIP
  selector:
    app: pod-2
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: nginx-port
