services/svc-pod-2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: svc-pod-2-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api-gateway.localdev
    http:
      paths:
      - path: /pod-2
        pathType: Prefix
        backend:
          service:
            name: svc-pod-2
            port:
              number: 80
